--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   cached_network_image: ^3.3.0
   flutter_svg: ^2.0.9
   intl: ^0.18.1
+  animated_splash_screen: ^1.3.0
+  lottie: ^2.7.0
+  page_transition: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -63,14 +66,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
 assets:
-  - assets/images/
-  - assets/images/img_star.svg
-  - assets/images/img_vuesax_outline_timer.svg
-  - assets/images/img_bookmark.svg
-  - assets/images/img_rectangle_647.png
-  - assets/images/img_rectangle_648.png
-  - assets/images/img_unsplash_ij24uq1smwm.png
-  - assets/images/img_rectangle_650.png
+  - animations/
+  - recipe_app/animations/
+  - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
